--- a/content/courses/ekonometri-ars-I-II/2-links-docs.Rmd
+++ b/content/courses/ekonometri-ars-I-II/2-links-docs.Rmd
@@ -39,6 +39,7 @@ outdated <- "no_entry"
     + [Ekonometri II - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmWlaoQxv-_3bGhKG8C7FOX) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [R ile Ekonometri II - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitkl1NkezEC8S9FEyBufaK13) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Ekonometri Araştırmaları I-II - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [R ile Ekonometri Araştırmaları I-II - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmQkGp98r9oiLgWEoW4Az3Y) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Ekonometrik Modelleme - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmX4rFuzwEPV6LwSIkW2wfi) `r emo::ji(tr)``r emo::ji(in.progress)`
     + [Ekonometrik Modelleme - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitk83Yi1sMWWviJXi2oeUTiS) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [R ile Ekonometrik Modelleme - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitk5XQXH9JYm81CJrr4o9Zhl) `r emo::ji(tr)``r emo::ji(in.progress)`
