--- a/content/courses/ekonometri-i/3-exams-ps.Rmd
+++ b/content/courses/ekonometri-i/3-exams-ps.Rmd
@@ -37,7 +37,7 @@ outdated <- "no_entry"
 ## Sınavlar
 - [Ara Sınav - İnceleme](`r paste0(ekonometri.i.path, "Ekonometri_I - Ara Sinav Inceleme (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
     + [Ara Sınav - Örnek Sorular](`r paste0(ekonometri.i.path, "Ekonometri_I - Ara Sinav Ornek Sorular (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
-    + [Ara Sınav - Güz 2020](`r paste0(ekonometri.i.path, "Ekonometri_II_AraSınav_A_Cevap (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [Ara Sınav - Güz 2020](`r paste0(ekonometri.i.path, "Ekonometri_I_AraSınav_A_Cevap (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
 - [Final Sınavı - İnceleme](`r paste0(ekonometri.i.path, "Ekonometri_I - Final Sinavi Inceleme (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
     + [Final Sınavı - Örnek Sorular](`r paste0(ekonometri.i.path, "Ekonometri_I - Final Sinavi Ornek Sorular (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [CANVAS'ta Online Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
