--- a/content/courses/ekonometri-i/4-lectures.Rmd
+++ b/content/courses/ekonometri-i/4-lectures.Rmd
@@ -32,4 +32,22 @@ outdated <- "no_entry"
 
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Notlar]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Notlar](`r paste0(ekonometri.i.path, "Ekonometri_II_-_Hafta_1.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+
+## Hafta #2
+- [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Notlar](`r paste0(ekonometri.i.path, "Ekonometri_II_-_Hafta_2.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+
+## Hafta #3
+- [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Notlar](`r paste0(ekonometri.i.path, "Ekonometri_II_-_Hafta_3.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+
+## Hafta #4
+- [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Notlar](`r paste0(ekonometri.i.path, "Ekonometri_II_-_Hafta_4.pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+
+## Hafta #5
+- [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Notlar](`r paste0(ekonometri.i.path, "Ekonometri_II_-_Hafta_5.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+
+
