--- a/content/courses/ekonomi-i/01-st.Rmd
+++ b/content/courses/ekonomi-i/01-st.Rmd
@@ -41,8 +41,8 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [Önemli Günler](`r paste0(ekonomi.i.path, "ST/Ekonomiye Giris_I - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
 
 ## Ders Kitabı
-- [Kitap Seçimi Açıklaması](`r paste0(ekonomi.i.path, "Ekonmiye Giris_I_Kitap Secimi Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
+- [Kitap Seçimi Açıklaması](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I_Kitap Secimi Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
 
 ## Ders Değerlendirme Anketi
-- [Ders Değerlendirme Anketi - Açıklama](`r paste0(ekonomi.i.path, "ST/Ekonmiye Giris_I_Ders Degerlendirme Anketi.pdf")`) `r emo::ji(tr)`
+- [Ders Değerlendirme Anketi - Açıklama](`r paste0(ekonomi.i.path, "ST/Ekonomiye Giris_I_Ders Degerlendirme Anketi.pdf")`) `r emo::ji(tr)`
 - [Ders Değerlendirme Anketi - Link](https://forms.gle/sxp48WjRcgq8yrv66) `r emo::ji(tr)`
