--- a/content/courses/ekonometri-ii/01-ec.Rmd
+++ b/content/courses/ekonometri-ii/01-ec.Rmd
@@ -39,7 +39,7 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 ## Ders Planı ve Önemli Günler
 | 1. Öğretim | 2. Öğretim | Yaz Okulu |
 | :--- | :--- | :--- |
-| [Ders Planı](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II_1O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Ders Planı](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II_2O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Ders Planı](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` |
+| [Ders Planı](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II_1O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)` | [Ders Planı](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II_2O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)` | [Ders Planı](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)` |
 | [Önemli Günler](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II_1O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Önemli Günler](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II_2O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Önemli Günler](`r paste0(ekonometri.ii.path, "EC/Ekonometri_II - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` |
 
 ## Ders Kitabı
