--- a/content/courses/ekonometri-ii/_index.Rmd
+++ b/content/courses/ekonometri-ii/_index.Rmd
@@ -24,4 +24,4 @@ menu:
 <br>
 
 Ekonometri II dersine hoş geldiniz!  
-Bu dersin amacı Ekonometri I dersinde doğrusal regresyon modellerini oluşturmak için kullanılan Gauss Markov varsayımlarının geçerli olmadığı durumları detaylı olarak incelenmek ve ekonometride kullanılan temel modelleme tekniklerini tanıtmaktır. Ayrıntılı olarak ele alınacak konu başlıkları arasında otokorelasyon, çoklu doğrusal bağıntı ve değişen varyans sorunlarının sebepleri, sonuçları, test edilmesi ve düzeltilmesi bulunmaktadır.
+Bu dersin amacı Ekonometri I dersinde doğrusal regresyon modellerini oluşturmak için kullanılan Gauss Markov varsayımlarının geçerli olmadığı durumları detaylı olarak incelenmek ve ekonometride kullanılan temel modelleme tekniklerini tanıtmaktır. Ayrıntılı olarak ele alınacak konu başlıkları arasında otokorelasyon, çoklu doğrusal bağıntı ve değişen varyans sorunlarının sebepleri, sonuçları, test edilmesi ve düzeltilmesi bulunmaktadır. Ayrıca nitel bağımlı ve bağımsız değişkenler varlığında ekonometrik modelleme tekniklerinin ve eşanlı denklem modellerinin de üzerinde durulacaktır.
