--- a/content/courses/ekonometri-ars-I-II/_index.Rmd
+++ b/content/courses/ekonometri-ars-I-II/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 # Course title, summary, and position.
 linktitle: "Ekonometri Araştırmaları I-II"
-summary: "Verildiği son bölüm ve dönem: İktisat - Güz 2020"
+summary: "Verildiği son bölüm ve dönem: İktisat - Güz/Bahar 2021"
 weight: 30
 categories: [Ders]
 tags: [ekonometri araştırmaları I-II, türkçe, turkish]
