--- a/content/courses/ekonometri-ii/_index.Rmd
+++ b/content/courses/ekonometri-ii/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 # Course title, summary, and position.
 linktitle: "Ekonometri II"
-summary: "Verildiği son bölüm ve dönem: İktisat - Yaz 2020"
+summary: "Verildiği son bölüm ve dönem: İktisat - Bahar 2021"
 weight: 20
 categories: [Ders]
 tags: [ekonometri II, türkçe, turkish]
