--- a/content/courses/ekonomi/_index.Rmd
+++ b/content/courses/ekonomi/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 # Course title, summary, and position.
 linktitle: "Ekonomi"
-summary: "Verildiği son bölüm ve dönem: Metalurji ve Malzeme Mühendisliği - Bahar 2019 ve Endüstri Mühendisliği - Bahar 2020"
+summary: "Verildiği son bölüm ve dönem: Endüstri Mühendisliği - Bahar 2021 ve Metalurji ve Malzeme Mühendisliği - Bahar 2019"
 weight: 80
 categories: [Ders]
 tags: [ekonomi, türkçe, turkish]
