--- a/content/courses/ekonometri-i/_index.Rmd
+++ b/content/courses/ekonometri-i/_index.Rmd
@@ -24,4 +24,5 @@ menu:
 <br>
 
 Ekonometri I dersine hoş geldiniz!  
+Bu dersin amacı ekonometri biliminin temel ilkelerinin kavramsal olarak incelemek ve ekonometride kullanılan temel modelleme tekniklerini tanıtmaktır. Ayrıntılı olarak ele alınacak konu başlıkları arasında istatistik kavramlarının gözden geçirilmesi, basit doğrusal regresyon modeli ve çoklu doğrusal regresyon modelinde tahmin ve çıkarsama bulunmaktadır. Ayrıca çoklu doğrusal regresyon modelinin asimptotik özelliklerinin de üzerinde durulacaktır.
 
