--- a/content/courses/ekonometri-i/4-lectures.Rmd
+++ b/content/courses/ekonometri-i/4-lectures.Rmd
@@ -50,4 +50,7 @@ outdated <- "no_entry"
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Notlar](`r paste0(ekonometri.i.path, "Ekonometri_II_-_Hafta_5.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
+## Hafta #6
+- [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Notlar](`r paste0(ekonometri.i.path, "Ekonometri_II_-_Hafta_6.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
