--- a/content/courses/ekonometrik-modelleme/2-links-docs.Rmd
+++ b/content/courses/ekonometrik-modelleme/2-links-docs.Rmd
@@ -35,16 +35,19 @@ outdated <- "no_entry"
 - [Ekonometri I - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlqshWDBUxxktcyDo8V4BvN) `r emo::ji(tr)``r emo::ji(in.progress)`
     + [Ekonometri I - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitkkBYmrluukSunncmvL7JSF) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [R ile Ekonometri I - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlwPLlG1nEh7TczOXZrYw-9) `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Ekonometri II - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlL_CbPiev5Lu0j3dKvQq7x) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Ekonometri II - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlL_CbPiev5Lu0j3dKvQq7x) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [Ekonometri II - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmWlaoQxv-_3bGhKG8C7FOX) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [R ile Ekonometri II - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitkl1NkezEC8S9FEyBufaK13) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Zaman Serileri Analizi - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnuvg9CvLkS3pAv6JAAWzz6) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Zaman Serileri Analizi - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitknof9XxlP73K1crTkoUZtQ) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [R ile Zaman Serileri Analizi - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnFyDakbzZFI5vJ0oSiAooU) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Ekonometri Araştırmaları I-II - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [R ile Ekonometri Araştırmaları I-II - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmQkGp98r9oiLgWEoW4Az3Y) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Ekonometrik Modelleme - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmX4rFuzwEPV6LwSIkW2wfi) `r emo::ji(tr)``r emo::ji(in.progress)`
     + [Ekonometrik Modelleme - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitk83Yi1sMWWviJXi2oeUTiS) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [R ile Ekonometrik Modelleme - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitk5XQXH9JYm81CJrr4o9Zhl) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [R ile 15 Dakikada Kolay Kodlama - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitml03Ea8sOjblldkZW-XU5J) `r emo::ji(tr)``r emo::ji(in.progress)`
-- [R Rastgele - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlK87V9m6L0hT2jfKmWkNct) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [R Rastgele - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlK87V9m6L0hT2jfKmWkNct) `r emo::ji(tr)``r emo::ji(to.be.updated)`
 
 ## Diğer Dokümanlar
 - [İstatistiksel Tablolar - Wooldridge](`r paste0(ekonometri.i.path, "Istatistiksel Tablolar - Wooldridge.pdf")`) `r emo::ji(tr)`
