--- a/content/courses/ekonometrik-modelleme/4-lectures.Rmd
+++ b/content/courses/ekonometrik-modelleme/4-lectures.Rmd
@@ -32,24 +32,24 @@ outdated <- "no_entry"
 
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Notlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_1.pdf")`) `r emo::ji(tr)`
+- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_1.pdf")`) `r emo::ji(tr)`
 
 ## Hafta #2
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Notlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_2.pdf")`) `r emo::ji(tr)`
+- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_2.pdf")`) `r emo::ji(tr)`
 
 ## Hafta #3
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Notlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_3.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_3.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Hafta #4
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Notlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_4.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_4.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Hafta #5
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Notlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme_-_Hafta_5.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Slaytlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme_-_Hafta_5.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Hafta #6
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Notlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme_-_Hafta_6.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Slaytlar](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme_-_Hafta_6.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
